welcome.lessons.welcome.bat.bool2.MaxMod5.scala.code
def maxMod5(a:Int, b:Int):Int = {
	if (a==b) {
		return 0
	}else if (a>b) {
		if (a%5 == b%5) {
			return b
		}else return a
	}else if (a<b) {
		if (a%5 == b%5) {
			return a
		}else return b
	}
}
